edit footer links and main page alvaro link

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                     alt="actor-image"
                   />
                   <div class="actors-description">
-                    <a href="./src/pages/actor1-page/alvaro-morte.html"
+                    <a href="./src/pages/alvaro morte/alvaro-morte.html"
                       >Álvaro Morte</a
                     >
                   </div>
@@ -365,11 +365,26 @@
             <h1>Actors page:</h1>
             <nav class="footer-menu">
               <ul class="footer-menu-items">
-                <li class="footer-menu-item"><a href="#">Lorem</a></li>
-                <li class="footer-menu-item"><a href="#">Lorem</a></li>
-                <li class="footer-menu-item"><a href="#">Lorem</a></li>
-                <li class="footer-menu-item"><a href="#">Lorem</a></li>
-                <li class="footer-menu-item"><a href="#">Lorem</a></li>
+                <li class="footer-menu-item">
+                  <a href="./src/pages/pedro alonso/pedro-alonso.html"
+                    >Pedro Alonso</a
+                  >
+                </li>
+                <li class="footer-menu-item">
+                  <a href="./src/pages/alvaro morte/alvaro-morte.html"
+                    >Alvaro Morte</a
+                  >
+                </li>
+                <li class="footer-menu-item">
+                  <a href="./src/pages/itzair ituno/itzair-ituno.html"
+                    >Itzair Ituno</a
+                  >
+                </li>
+                <li class="footer-menu-item">
+                  <a href="./src/pages/ursula corbero/ursula-corbero.html"
+                    >Urusla Corbero</a
+                  >
+                </li>
               </ul>
             </nav>
           </div>
