--- a/src/pages/alvaro morte/alvaro-morte.html
+++ b/src/pages/alvaro morte/alvaro-morte.html
@@ -145,11 +145,20 @@
             <h1>Actors page:</h1>
             <nav class="footer-menu">
               <ul class="footer-menu-items">
-                <li class="footer-menu-item"><a href="#">Lorem</a></li>
-                <li class="footer-menu-item"><a href="#">Lorem</a></li>
-                <li class="footer-menu-item"><a href="#">Lorem</a></li>
-                <li class="footer-menu-item"><a href="#">Lorem</a></li>
-                <li class="footer-menu-item"><a href="#">Lorem</a></li>
+                <li class="footer-menu-item">
+                  <a href="../pedro alonso/pedro-alonso.html">Pedro Alonso</a>
+                </li>
+                <li class="footer-menu-item">
+                  <a href="../ursula corbero/ursula-corbero.html"
+                    >Ursula Corbero</a
+                  >
+                </li>
+                <li class="footer-menu-item">
+                  <a href="../itzair ituno/itzair-ituno.html">Itzair Ituno</a>
+                </li>
+                <li class="footer-menu-item">
+                  <a href="../../../index.html">Home</a>
+                </li>
               </ul>
             </nav>
           </div>
