edit pedro alonso text

--- a/src/pages/pedro alonso/pedro-alonso.html
+++ b/src/pages/pedro alonso/pedro-alonso.html
@@ -40,21 +40,25 @@
         </nav>
         <div class="nav-bottom">
           <ul class="menu">
-            <li class="menu-item item-vip"><a href="#">Home</a></li>
+            <li class="menu-item item-vip">
+              <a href="../../../index.html">Home</a>
+            </li>
             <li class="menu-item"><a href="#">Summery</a></li>
-            <li class="menu-item"><a href="#">Achivment</a></li>
+            <li class="menu-item">
+              <a href="#winning-awards-section">Achivment</a>
+            </li>
             <li class="menu-item"><a href="#">Gallery</a></li>
           </ul>
         </div>
         <div class="header-main">
           <p class="header-main-subTitle">Actor</p>
-          <h1 class="header-main-title">Alvaro <span> Morte</span></h1>
+          <h1 class="header-main-title">Pedro <span> Alonso</span></h1>
           <p class="header-main-description">
-            Álvaro Antonio García Pérez (born 23 February 1975), He gained
-            worldwide recognition for playing the role of 'The Professor' in the
-            television series Money Heist.Morte plays Logain Ablar, in the
-            Amazon Prime Video's high fantasy series, The Wheel of Time (2021
-            present)known professionally as Álvaro Morte, is a Spanish actor.
+            Pedro González Alonso (born 21 june 1971), known as Pedro Alonso, is
+            a Spanish actor, writer, and artist. He is best known for his role
+            of Andrés "Berlin" de Fonollosa in the Spanish heist series Money
+            Heist and its spin-off Berlin, and for the role of Diego Murquía in
+            the historical drama series Gran Hotel.
           </p>
         </div>
         <div class="header-bottom">
@@ -81,19 +85,15 @@
           </div>
           <div class="winning-awards-desc">
             <p>
-              Morte began his acting career when he played a minor role in the
-              Spanish television series Hospital Central. He landed his first
-              main role in a TV series in Planta 25,aired on a number of Spanish
-              regional TV broadcasters and in which he played Ray—a driver—from
-              2007 to 2008 He then played Adolfo Castillo in the Spanish
-              television series Bandolera, Gabriel Areta in the soap opera Amar
-              en tiempos revueltos.Morte starred in the 2019 Movistar+
-              television series El embarcadero, playing Óscar, a man who has
-              lived a double life by living with two different women
-              separately.In December 2019, Morte was announced to have joined
-              the cast of the Amazon television series The Wheel of Time, an
-              adaption of the epic fantasy novels of the same name, set to
-              portray Logain.
+              Alonso is known for his performances on television in Rías Baixas
+              (2003–2005), Maridos e mulleres (2006–2008), Padre Casares
+              (2008–2015), and Gondar (2009) at a local level in Galicia and
+              nationally for playing characters such as Diego Murquía / Adrián
+              Vera Celande in historical drama Gran Hotel. He played the role of
+              Andrés "Berlin" de Fonollosa in the crime drama series Money Heist
+              (La casa de papel), which aired on Antena 3 in 2017 and was later
+              broadcast on Netflix. In 2018, he was chosen as "International
+              Star of the Year" by GQ Turkey magazine.
             </p>
           </div>
           <div class="winning-awards-achievement">
