edit itzair page texts

--- a/src/pages/itzair ituno/itzair-ituno.html
+++ b/src/pages/itzair ituno/itzair-ituno.html
@@ -40,21 +40,24 @@
         </nav>
         <div class="nav-bottom">
           <ul class="menu">
-            <li class="menu-item item-vip"><a href="#">Home</a></li>
+            <li class="menu-item item-vip">
+              <a href="../../../index.html">Home</a>
+            </li>
             <li class="menu-item"><a href="#">Summery</a></li>
-            <li class="menu-item"><a href="#">Achivment</a></li>
+            <li class="menu-item">
+              <a href="#winning-awards-section">Achivment</a>
+            </li>
             <li class="menu-item"><a href="#">Gallery</a></li>
           </ul>
         </div>
         <div class="header-main">
           <p class="header-main-subTitle">Actor</p>
-          <h1 class="header-main-title">Alvaro <span> Morte</span></h1>
+          <h1 class="header-main-title">Itzair <span> Ituno</span></h1>
           <p class="header-main-description">
-            Álvaro Antonio García Pérez (born 23 February 1975), He gained
-            worldwide recognition for playing the role of 'The Professor' in the
-            television series Money Heist.Morte plays Logain Ablar, in the
-            Amazon Prime Video's high fantasy series, The Wheel of Time (2021
-            present)known professionally as Álvaro Morte, is a Spanish actor.
+            Itziar Ituño Martínez (born 18 June 1974) is a Spanish actress, who
+            performs in her native Basque language as well as in Spanish. She is
+            best known for her role as Inspector Raquel Murillo in the Spanish
+            television series La Casa de Papel (Money Heist).
           </p>
         </div>
         <div class="header-bottom">
@@ -81,19 +84,18 @@
           </div>
           <div class="winning-awards-desc">
             <p>
-              Morte began his acting career when he played a minor role in the
-              Spanish television series Hospital Central. He landed his first
-              main role in a TV series in Planta 25,aired on a number of Spanish
-              regional TV broadcasters and in which he played Ray—a driver—from
-              2007 to 2008 He then played Adolfo Castillo in the Spanish
-              television series Bandolera, Gabriel Areta in the soap opera Amar
-              en tiempos revueltos.Morte starred in the 2019 Movistar+
-              television series El embarcadero, playing Óscar, a man who has
-              lived a double life by living with two different women
-              separately.In December 2019, Morte was announced to have joined
-              the cast of the Amazon television series The Wheel of Time, an
-              adaption of the epic fantasy novels of the same name, set to
-              portray Logain.
+              In 2001 she got a role in the soap opera Goenkale. In this
+              television series, she played Nekane Beitia, a bisexual
+              policewoman from the fictional village of Arralde. She played the
+              role until 2015, when the show was canceled. This role increased
+              her visibility in the Basque Country.In addition to her film,
+              television, and theater roles, she is also a singer in three
+              bands: Dangiliske, EZ3, and INGOT.On 26 September 2017, she was a
+              presenter of the Basque Film Gala and the EITB Gala for the 65th
+              edition of the San Sebastian International Film Festival.It was
+              announced in May 2020 that Ituño will make her English language
+              debut in the British animated short film Salvation Has No Name,
+              due for release in 2020
             </p>
           </div>
           <div class="winning-awards-achievement">
