--- a/src/pages/ursula corbero/ursula-corbero.html
+++ b/src/pages/ursula corbero/ursula-corbero.html
@@ -40,21 +40,24 @@
         </nav>
         <div class="nav-bottom">
           <ul class="menu">
-            <li class="menu-item item-vip"><a href="#">Home</a></li>
+            <li class="menu-item item-vip">
+              <a href="../../../index.html">Home</a>
+            </li>
             <li class="menu-item"><a href="#">Summery</a></li>
-            <li class="menu-item"><a href="#">Achivment</a></li>
+            <li class="menu-item">
+              <a href="#winning-awards-section">Achivment</a>
+            </li>
             <li class="menu-item"><a href="#">Gallery</a></li>
           </ul>
         </div>
         <div class="header-main">
           <p class="header-main-subTitle">Actor</p>
-          <h1 class="header-main-title">Alvaro <span> Morte</span></h1>
+          <h1 class="header-main-title">Ursula <span> Corbero</span></h1>
           <p class="header-main-description">
-            Álvaro Antonio García Pérez (born 23 February 1975), He gained
-            worldwide recognition for playing the role of 'The Professor' in the
-            television series Money Heist.Morte plays Logain Ablar, in the
-            Amazon Prime Video's high fantasy series, The Wheel of Time (2021
-            present)known professionally as Álvaro Morte, is a Spanish actor.
+            Úrsula Corberó Delgado is a Spanish actress. She became known in
+            Spain for playing Ruth Gómez in the teen drama series Física o
+            Química, Margarita de Austria in the historical fiction series
+            Isabel, and Marta in the comedy film Girl's Night Out.
           </p>
         </div>
         <div class="header-bottom">
@@ -81,19 +84,20 @@
           </div>
           <div class="winning-awards-desc">
             <p>
-              Morte began his acting career when he played a minor role in the
-              Spanish television series Hospital Central. He landed his first
-              main role in a TV series in Planta 25,aired on a number of Spanish
-              regional TV broadcasters and in which he played Ray—a driver—from
-              2007 to 2008 He then played Adolfo Castillo in the Spanish
-              television series Bandolera, Gabriel Areta in the soap opera Amar
-              en tiempos revueltos.Morte starred in the 2019 Movistar+
-              television series El embarcadero, playing Óscar, a man who has
-              lived a double life by living with two different women
-              separately.In December 2019, Morte was announced to have joined
-              the cast of the Amazon television series The Wheel of Time, an
-              adaption of the epic fantasy novels of the same name, set to
-              portray Logain.
+              She debuted as Maria in the television series Mirall Trencat in
+              2002. She appeared as Sara in Ventdelplà in 2005–06, and in series
+              Cuenta atrás in 2007. In 2008, she portrayed Manuela Portillo in
+              series El Internado and began working on the Antena 3 television
+              series Física o química until 2010.n March 2015, she starred as
+              Nadia in Perdiendo el Norte alongside the actors Blanca Suarez and
+              Yon Gonzalez.This same year, she received the Ciudad de Alicante
+              Award, an award created by the Alicante Film Festival to encourage
+              Spanish young talents.In 2015, she also landed her first main role
+              in a movie in Cómo sobrevivir a una despedida and confirmed she's
+              one of the best comical actresses of Spain.In 2017, Corberó landed
+              a main role in the heist television series La Casa de Papel (Money
+              Heist). She played Tokyo, the narrator of the story, a runaway
+              robber who is scouted by the Professor to participate in his plan.
             </p>
           </div>
           <div class="winning-awards-achievement">
