change actors name title , change winning award height

--- a/src/pages/ursula corbero/ursula-corbero.html
+++ b/src/pages/ursula corbero/ursula-corbero.html
@@ -48,7 +48,7 @@
         </div>
         <div class="header-main">
           <p class="header-main-subTitle">Actor</p>
-          <h1 class="header-main-title">Alvaro <span> Morte</span></h1>
+          <h1 class="header-main-title">Úrsula Corberó - <span> Tokio</span></h1>
           <p class="header-main-description">
             Álvaro Antonio García Pérez (born 23 February 1975), He gained
             worldwide recognition for playing the role of 'The Professor' in the
