--- a/src/pages/alvaro morte/alvaro-morte.html
+++ b/src/pages/alvaro morte/alvaro-morte.html
@@ -1,203 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      type="image/png"
-      sizes="96x96"
-      rel="icon"
-      href="../../../assets/images/fav-icon/icons8-money-heist-dali-48.png"
-    />
-    <title>Alvaro morte</title>
-    <link rel="stylesheet" href="../actors-style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-  </head>
-  <body>
-    <header class="alvaro-header">
-      <div class="container">
-        <nav class="nav-top">
-          <div class="nav-top-left">
-            <img
-              src="../../../assets/images/logo/Logonetflix.png"
-              alt="Logo Netflix"
-              class="logo"
-            />
-          </div>
-          <div class="nav-top-right">
-            <div class="nav-icon"><i class="fa-brands fa-facebook-f"></i></div>
-            <div class="nav-icon"><i class="fa-brands fa-instagram"></i></div>
-            <div class="nav-icon"><i class="fa-brands fa-twitter"></i></div>
-            <div class="nav-icon"><i class="fa-brands fa-youtube"></i></div>
-            <a href="#" class="btn nav-btn">Contact</a>
-          </div>
-        </nav>
-        <div class="nav-bottom">
-          <ul class="menu">
-            <li class="menu-item item-vip"><a href="#">Home</a></li>
-            <li class="menu-item"><a href="#">Summery</a></li>
-            <li class="menu-item"><a href="#">Achivment</a></li>
-            <li class="menu-item"><a href="#">Gallery</a></li>
-          </ul>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link type="image/png" sizes="96x96" rel="icon"
+    href="../../../assets/images/fav-icon/icons8-money-heist-dali-48.png" />
+  <title>Alvaro morte</title>
+  <link rel="stylesheet" href="../actors-style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<body>
+  <header class="alvaro-header">
+    <div class="container">
+      <nav class="nav-top">
+        <div class="nav-top-left">
+          <img src="../../../assets/images/logo/Logonetflix.png" alt="Logo Netflix" class="logo" />
         </div>
-        <div class="header-main">
-          <p class="header-main-subTitle">Actor</p>
-          <h1 class="header-main-title">Álvaro Morte - <span>Professor</span></h1>
-          <p class="header-main-description">
-            Álvaro Antonio García Pérez (born 23 February 1975), He gained
-            worldwide recognition for playing the role of 'The Professor' in the
-            television series Money Heist.Morte plays Logain Ablar, in the
-            Amazon Prime Video's high fantasy series, The Wheel of Time (2021
-            present)known professionally as Álvaro Morte, is a Spanish actor.
+        <div class="nav-top-right">
+          <div class="nav-icon"><i class="fa-brands fa-facebook-f"></i></div>
+          <div class="nav-icon"><i class="fa-brands fa-instagram"></i></div>
+          <div class="nav-icon"><i class="fa-brands fa-twitter"></i></div>
+          <div class="nav-icon"><i class="fa-brands fa-youtube"></i></div>
+          <a href="#" class="btn nav-btn">Contact</a>
+        </div>
+      </nav>
+      <div class="nav-bottom">
+        <ul class="menu">
+          <li class="menu-item item-vip"><a href="#">Home</a></li>
+          <li class="menu-item"><a href="#">Summery</a></li>
+          <li class="menu-item"><a href="#">Achivment</a></li>
+          <li class="menu-item"><a href="#">Gallery</a></li>
+        </ul>
+      </div>
+      <div class="header-main">
+        <p class="header-main-subTitle">Actor</p>
+        <h1 class="header-main-title">Álvaro Morte - <span>Professor</span></h1>
+        <p class="header-main-description">
+          Álvaro Antonio García Pérez (born 23 February 1975), He gained
+          worldwide recognition for playing the role of 'The Professor' in the
+          television series Money Heist.Morte plays Logain Ablar, in the
+          Amazon Prime Video's high fantasy series, The Wheel of Time (2021
+          present)known professionally as Álvaro Morte, is a Spanish actor.
+        </p>
+      </div>
+      <div class="header-bottom">
+        <img src="../../../assets/png/actors-page-png/award-actung-black.png" alt="achivment" />
+        <img src="../../../assets/png/actors-page-png/award-jeevika-black.png" alt="Achivment" />
+        <img src="../../../assets/png/actors-page-png/award-official-black.png" alt="Achivment" />
+      </div>
+    </div>
+  </header>
+  <main>
+    <!-- hadis section -->
+    <section class="about">
+      <div class="main">
+        <img src="./images/main.jpg" />
+        <div class="about-text">
+          <h1>Money Heist</h1>
+          <h3>ACTRESS:Alvaro Morte</h3>
+          <p>
+            Alvaro Morete was born on February 23, 1975 in the city of
+            Algeciras, in Cadiz, Spain, but moved to Córdoba with his family
+            shortly after. Álvaro began his studies in communications
+            engineering and later switched to art, graduating from the Superior
+            School of Dramatic Arts of Córdoba in 1999.Morete also holds a
+            master's degree from the University of Tampere.
           </p>
-        </div>
-        <div class="header-bottom">
-          <img
-            src="../../../assets/png/actors-page-png/award-actung-black.png"
-            alt="achivment"
-          />
-          <img
-            src="../../../assets/png/actors-page-png/award-jeevika-black.png"
-            alt="Achivment"
-          />
-          <img
-            src="../../../assets/png/actors-page-png/award-official-black.png"
-            alt="Achivment"
-          />
+          <div class="spen">
+            <div class="spen-1">2000</div>
+            lorem
+            <div class="spen-2">2000</div>
+            lorem
+          </div>
+          <button type="button">button</button>
         </div>
       </div>
-    </header>
-    <main>
-      <section class="winning-awards-section">
-        <div class="winning-awards-container container">
-          <div class="winning-awards-title">
-            <h2>Winning awards</h2>
+    </section>
+    <section class="winning-awards-section">
+      <div class="winning-awards-container container">
+        <div class="winning-awards-title">
+          <h2>Winning awards</h2>
+        </div>
+        <div class="winning-awards-desc">
+          <p>
+            Morte began his acting career when he played a minor role in the
+            Spanish television series Hospital Central. He landed his first
+            main role in a TV series in Planta 25,aired on a number of Spanish
+            regional TV broadcasters and in which he played Ray—a driver—from
+            2007 to 2008 He then played Adolfo Castillo in the Spanish
+            television series Bandolera, Gabriel Areta in the soap opera Amar
+            en tiempos revueltos.Morte starred in the 2019 Movistar+
+            television series El embarcadero, playing Óscar, a man who has
+            lived a double life by living with two different women
+            separately.In December 2019, Morte was announced to have joined
+            the cast of the Amazon television series The Wheel of Time, an
+            adaption of the epic fantasy novels of the same name, set to
+            portray Logain.
+          </p>
+        </div>
+        <div class="winning-awards-achievement">
+          <div class="achievement">
+            <img src="../../../assets/png/actors-page-png/award-actung-black.png" alt="achivment" />
           </div>
-          <div class="winning-awards-desc">
-            <p>
-              Morte began his acting career when he played a minor role in the
-              Spanish television series Hospital Central. He landed his first
-              main role in a TV series in Planta 25,aired on a number of Spanish
-              regional TV broadcasters and in which he played Ray—a driver—from
-              2007 to 2008 He then played Adolfo Castillo in the Spanish
-              television series Bandolera, Gabriel Areta in the soap opera Amar
-              en tiempos revueltos.Morte starred in the 2019 Movistar+
-              television series El embarcadero, playing Óscar, a man who has
-              lived a double life by living with two different women
-              separately.In December 2019, Morte was announced to have joined
-              the cast of the Amazon television series The Wheel of Time, an
-              adaption of the epic fantasy novels of the same name, set to
-              portray Logain.
-            </p>
+          <div class="achievement">
+            <img src="../../../assets/png/actors-page-png/award-jeevika-black.png" alt="achivment" />
           </div>
-          <div class="winning-awards-achievement">
-            <div class="achievement">
-              <img
-                src="../../../assets/png/actors-page-png/award-actung-black.png"
-                alt="achivment"
-              />
-            </div>
-            <div class="achievement">
-              <img
-                src="../../../assets/png/actors-page-png/award-jeevika-black.png"
-                alt="achivment"
-              />
-            </div>
-            <div class="achievement">
-              <img
-                src="../../../assets/png/actors-page-png/award-official-black.png"
-                alt="achivment"
-              />
-            </div>
-            <div class="achievement">
-              <img
-                src="../../../assets/png/actors-page-png/award-sedona-black.png"
-                alt="achivment"
-              />
-            </div>
+          <div class="achievement">
+            <img src="../../../assets/png/actors-page-png/award-official-black.png" alt="achivment" />
+          </div>
+          <div class="achievement">
+            <img src="../../../assets/png/actors-page-png/award-sedona-black.png" alt="achivment" />
           </div>
         </div>
-      </section>
-    </main>
-    <footer class="footer">
-      <section class="footer-container container">
-        <div class="footer-box">
-          <div class="footer-box-1">
-            <h1>Get Update</h1>
-            <h4>
-              write your email here to join our community and get update about
-              new season and spin off
-            </h4>
-            <form action="#">
-              <label for="email">
-                email
-                <input type="email" id="email" name="email" />
-              </label>
-            </form>
-          </div>
-          <div class="footer-box-2">
-            <h1>Actors page:</h1>
-            <nav class="footer-menu">
-              <ul class="footer-menu-items">
-                <li class="footer-menu-item">
-                  <a href="../pedro alonso/pedro-alonso.html">Pedro Alonso</a>
-                </li>
-                <li class="footer-menu-item">
-                  <a href="../ursula corbero/ursula-corbero.html"
-                    >Ursula Corbero</a
-                  >
-                </li>
-                <li class="footer-menu-item">
-                  <a href="../itzair ituno/itzair-ituno.html">Itzair Ituno</a>
-                </li>
-                <li class="footer-menu-item">
-                  <a href="../../../index.html">Home</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-          <div class="footer-box-3">
-            <h1>La casa de papel cast statement:</h1>
-            <p>
-              After the frantic rendezvous, Ávalos boarded a plane to Los
-              Angeles and popped the drive into his laptop. When his feet hit
-              the ground in California, he knew his next Spanish acquisition had
-              to be “Money Heist.”
-            </p>
-          </div>
-          <div class="footer-box-4">
-            <div class="icon-box">
-              <a class="footer-icon" href="#">
-                <img
-                  src="../../../assets/images/fav-icon/instagram-icon.png"
-                  alt="insta"
-                />
-              </a>
-              <a class="footer-icon" href="#">
-                <img
-                  src="../../../assets/images/fav-icon/telegram-icon.png"
-                  alt="telgram"
-                />
-              </a>
-              <a class="footer-icon" href="#">
-                <img
-                  src="../../../assets/images/fav-icon/whatsapp-icon.png"
-                  alt="whatsapp"
-                />
-              </a>
-              <a class="footer-icon" href="#">
-                <img src="../../../assets/images/fav-icon/x-icon.png" alt="x" />
-              </a>
-            </div>
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <section class="footer-container container">
+      <div class="footer-box">
+        <div class="footer-box-1">
+          <h1>Get Update</h1>
+          <h4>
+            write your email here to join our community and get update about
+            new season and spin off
+          </h4>
+          <form action="#">
+            <label for="email">
+              email
+              <input type="email" id="email" name="email" />
+            </label>
+          </form>
+        </div>
+        <div class="footer-box-2">
+          <h1>Actors page:</h1>
+          <nav class="footer-menu">
+            <ul class="footer-menu-items">
+              <li class="footer-menu-item">
+                <a href="../pedro alonso/pedro-alonso.html">Pedro Alonso</a>
+              </li>
+              <li class="footer-menu-item">
+                <a href="../ursula corbero/ursula-corbero.html">Ursula Corbero</a>
+              </li>
+              <li class="footer-menu-item">
+                <a href="../itzair ituno/itzair-ituno.html">Itzair Ituno</a>
+              </li>
+              <li class="footer-menu-item">
+                <a href="../../../index.html">Home</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="footer-box-3">
+          <h1>La casa de papel cast statement:</h1>
+          <p>
+            After the frantic rendezvous, Ávalos boarded a plane to Los
+            Angeles and popped the drive into his laptop. When his feet hit
+            the ground in California, he knew his next Spanish acquisition had
+            to be “Money Heist.”
+          </p>
+        </div>
+        <div class="footer-box-4">
+          <div class="icon-box">
+            <a class="footer-icon" href="#">
+              <img src="../../../assets/images/fav-icon/instagram-icon.png" alt="insta" />
+            </a>
+            <a class="footer-icon" href="#">
+              <img src="../../../assets/images/fav-icon/telegram-icon.png" alt="telgram" />
+            </a>
+            <a class="footer-icon" href="#">
+              <img src="../../../assets/images/fav-icon/whatsapp-icon.png" alt="whatsapp" />
+            </a>
+            <a class="footer-icon" href="#">
+              <img src="../../../assets/images/fav-icon/x-icon.png" alt="x" />
+            </a>
           </div>
         </div>
-      </section>
-    </footer>
-  </body>
+      </div>
+    </section>
+  </footer>
+</body>
+
 </html>
