main page edit links and text

--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
               characteristic: none of them has anything to lose.
             </p>
             <div class="header-main-links">
-              <a href="#" class="header-main-link1"> &#9998; More Synopsis</a>
-              <a href="#" class="header-main-link2">&#9737; Trailer</a>
+              <a href="#Synopsis" class="header-main-link1">
+                &#9998; More Synopsis</a
+              >
+              <a href="#Trailer" class="header-main-link2">&#9737; Trailer</a>
             </div>
           </div>
           <div class="header-main-right">
@@ -151,8 +153,8 @@
                 </p>
               </div>
               <div class="btn-box">
-                <a href="#">More movies</a>
-                <a href="#">Button</a>
+                <a href="#Info">More movies</a>
+                <a href="#Synopsis">Synopsis</a>
               </div>
             </div>
           </div>
@@ -182,8 +184,8 @@
           </p>
 
           <div class="btn-box">
-            <a href="#">More movies</a>
-            <a href="#">Button</a>
+            <a href="#Trailer">Trailer</a>
+            <a href="#Info">Info</a>
           </div>
         </div>
       </section>
@@ -196,20 +198,24 @@
             </div>
             <div class="sec6-content-box">
               <div class="sec6-label-box">
-                <span class="sec6-label-1">content</span>
-                <span class="sec6-label-2">content</span>
-                <span class="sec6-label-3">content</span>
+                <span class="sec6-label-1">2017</span>
+                <span class="sec6-label-2">action</span>
+                <span class="sec6-label-3">spain</span>
               </div>
-              <h1>Lorem ipsum</h1>
+              <h1>Money Heists</h1>
               <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Impedit, optio? Enim laudantium vitae excepturi laboriosam error
-                ducimus id deleniti, quaerat necessitatibus soluta possimus.
-                Molestiae vero iste consequatur? Distinctio, tempore.
+                The Money Heist series is a crime and thriller series from
+                Spain, and the original name of the series is Lacasa de Papel,
+                which means house of paper. The heads of Netflix have said that
+                the reason for changing the name of the Money Heist series in
+                English is to avoid its resemblance to the House of Cards
+                series. Money Heist was originally slated for a 15-episode run
+                on Antenna TV in 2017, before Netflix acquired the rights in
+                2019.
               </p>
               <div class="sec6-button-box">
-                <a class="sec6-button-1" href="#">content</a>
-                <a class="sec6-button-2" href="#">content</a>
+                <a class="sec6-button-1" href="#Info">info</a>
+                <a class="sec6-button-2" href="#">home</a>
               </div>
             </div>
           </div>
