edit alvaro about section

--- a/src/pages/alvaro morte/alvaro-morte.html
+++ b/src/pages/alvaro morte/alvaro-morte.html
@@ -80,7 +80,7 @@
       <!-- hadis section -->
       <section class="about">
         <div class="main">
-          <img src="./images/main.jpg" />
+          <img src="../../../assets/images/actors/alvaro-morte_6.jpg" />
           <div class="about-text">
             <h1>Money Heist</h1>
             <h3>ACTRESS:Alvaro Morte</h3>
@@ -93,12 +93,12 @@
               holds a master's degree from the University of Tampere.
             </p>
             <div class="spen">
-              <div class="spen-1">2000</div>
-              lorem
-              <div class="spen-2">2000</div>
-              lorem
+              <div class="spen-1">1975</div>
+              <p class="span-text">born</p>
+              <div class="spen-2">2017</div>
+              <p class="span-text">Start Series</p>
             </div>
-            <button type="button">button</button>
+            <button type="button" class="btn">button</button>
           </div>
         </div>
       </section>
