end about section in all

--- a/src/pages/pedro alonso/pedro-alonso.html
+++ b/src/pages/pedro alonso/pedro-alonso.html
@@ -47,86 +47,6 @@
             <li class="menu-item"><a href="#">Gallery</a></li>
           </ul>
         </div>
-<<<<<<< HEAD
-        <div class="nav-top-right">
-          <div class="nav-icon"><i class="fa-brands fa-facebook-f"></i></div>
-          <div class="nav-icon"><i class="fa-brands fa-instagram"></i></div>
-          <div class="nav-icon"><i class="fa-brands fa-twitter"></i></div>
-          <div class="nav-icon"><i class="fa-brands fa-youtube"></i></div>
-          <a href="#" class="btn nav-btn">Contact</a>
-        </div>
-      </nav>
-      <div class="nav-bottom">
-        <ul class="menu">
-          <li class="menu-item item-vip"><a href="#">Home</a></li>
-          <li class="menu-item"><a href="#">Summery</a></li>
-          <li class="menu-item"><a href="#">Achivment</a></li>
-          <li class="menu-item"><a href="#">Gallery</a></li>
-        </ul>
-      </div>
-      <div class="header-main">
-        <p class="header-main-subTitle">Actor</p>
-        <h1 class="header-main-title">Pedro Alonso -<span> Berlin</span></h1>
-        <p class="header-main-description">
-          Pedro González Alonso (born 21 June 1971), known as Pedro Alonso, is a Spanish actor, writer, and artist. He
-          is best known for his role of Andrés "Berlin" de Fonollosa in the Spanish heist series Money Heist (La casa de
-          papel) and its spin-off Berlin, and for the role of Diego Murquía in the historical drama series Gran Hotel.
-        </p>
-      </div>
-      <div class="header-bottom">
-        <img src="../../../assets/png/actors-page-png/award-actung-black.png" alt="achivment" />
-        <img src="../../../assets/png/actors-page-png/award-jeevika-black.png" alt="Achivment" />
-        <img src="../../../assets/png/actors-page-png/award-official-black.png" alt="Achivment" />
-      </div>
-    </div>
-  </header>
-  <main>
-    <!-- hadis section -->
-    <section class="about">
-      <div class="main">
-        <img src="./images/main.jpg" />
-        <div class="about-text">
-          <h1>Money Heist</h1>
-          <h3>ACTRESS:Alvaro Morte</h3>
-          <p>
-            Alvaro Morete was born on February 23, 1975 in the city of
-            Algeciras, in Cadiz, Spain, but moved to Córdoba with his family
-            shortly after. Álvaro began his studies in communications
-            engineering and later switched to art, graduating from the Superior
-            School of Dramatic Arts of Córdoba in 1999.Morete also holds a
-            master's degree from the University of Tampere.
-          </p>
-          <div class="spen">
-            <div class="spen-1">2000</div>
-            lorem
-            <div class="spen-2">2000</div>
-            lorem
-          </div>
-          <button type="button">button</button>
-        </div>
-      </div>
-    </section>
-    <section class="winning-awards-section">
-      <div class="winning-awards-container container">
-        <div class="winning-awards-title">
-          <h2>Winning awards</h2>
-        </div>
-        <div class="winning-awards-desc">
-          <p>
-            Morte began his acting career when he played a minor role in the
-            Spanish television series Hospital Central. He landed his first
-            main role in a TV series in Planta 25,aired on a number of Spanish
-            regional TV broadcasters and in which he played Ray—a driver—from
-            2007 to 2008 He then played Adolfo Castillo in the Spanish
-            television series Bandolera, Gabriel Areta in the soap opera Amar
-            en tiempos revueltos.Morte starred in the 2019 Movistar+
-            television series El embarcadero, playing Óscar, a man who has
-            lived a double life by living with two different women
-            separately.In December 2019, Morte was announced to have joined
-            the cast of the Amazon television series The Wheel of Time, an
-            adaption of the epic fantasy novels of the same name, set to
-            portray Logain.
-=======
         <div class="header-main">
           <p class="header-main-subTitle">Actor</p>
           <h1 class="header-main-title">Pedro Alonso -<span> Berlin</span></h1>
@@ -136,7 +56,6 @@
             of Andrés "Berlin" de Fonollosa in the Spanish heist series Money
             Heist (La casa de papel) and its spin-off Berlin, and for the role
             of Diego Murquía in the historical drama series Gran Hotel.
->>>>>>> 4dd790cdb107b83789623d169495fbdf72179637
           </p>
         </div>
         <div class="header-bottom">
@@ -156,6 +75,30 @@
       </div>
     </header>
     <main>
+      <section class="about">
+        <div class="main">
+          <img src="../../../assets/images/actors/3748301.jpg" />
+          <div class="about-text">
+            <h1>Money Heist</h1>
+            <h3>ACTRESS:Pedro González Alonso</h3>
+            <p>
+              Pedro González Alonso (born 21 June 1971), known as Pedro Alonso,
+              is a Spanish actor, writer, and artist. He is best known for his
+              role of Andrés "Berlin" de Fonollosa in the Spanish heist series
+              Money Heist (La casa de papel) and its spin-off Berlin, and for
+              the role of Diego Murquía in the historical drama series Gran
+              Hotel.
+            </p>
+            <div class="spen">
+              <div class="spen-1">1971</div>
+              <p class="span-text">born</p>
+              <div class="spen-2">2017</div>
+              <p class="span-text">Start Series</p>
+            </div>
+            <button type="button">button</button>
+          </div>
+        </div>
+      </section>
       <section class="winning-awards-section">
         <div class="winning-awards-container container">
           <div class="winning-awards-title">
@@ -205,14 +148,6 @@
             </div>
           </div>
         </div>
-<<<<<<< HEAD
-      </div>
-    </section>
-  </footer>
-</body>
-
-</html>
-=======
       </section>
     </main>
     <footer class="footer">
@@ -293,4 +228,3 @@
     </footer>
   </body>
 </html>
->>>>>>> 4dd790cdb107b83789623d169495fbdf72179637
