--- a/src/pages/ursula corbero/ursula-corbero.html
+++ b/src/pages/ursula corbero/ursula-corbero.html
@@ -1,191 +1,233 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      type="image/png"
+      sizes="96x96"
+      rel="icon"
+      href="../../../assets/images/fav-icon/icons8-money-heist-dali-48.png"
+    />
+    <title>Alvaro morte</title>
+    <link rel="stylesheet" href="../actors-style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link type="image/png" sizes="96x96" rel="icon"
-    href="../../../assets/images/fav-icon/icons8-money-heist-dali-48.png" />
-  <title>Alvaro morte</title>
-  <link rel="stylesheet" href="../actors-style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-
-<body>
-  <header class="ursula-header">
-    <div class="container">
-      <nav class="nav-top">
-        <div class="nav-top-left">
-          <img src="../../../assets/images/logo/Logonetflix.png" alt="Logo Netflix" class="logo" />
-        </div>
-        <div class="nav-top-right">
-          <div class="nav-icon"><i class="fa-brands fa-facebook-f"></i></div>
-          <div class="nav-icon"><i class="fa-brands fa-instagram"></i></div>
-          <div class="nav-icon"><i class="fa-brands fa-twitter"></i></div>
-          <div class="nav-icon"><i class="fa-brands fa-youtube"></i></div>
-          <a href="#" class="btn nav-btn">Contact</a>
-        </div>
-      </nav>
-      <div class="nav-bottom">
-        <ul class="menu">
-          <li class="menu-item item-vip">
-            <a href="../../../index.html">Home</a>
-          </li>
-          <li class="menu-item"><a href="#">Summery</a></li>
-          <li class="menu-item">
-            <a href="#winning-awards-section">Achivment</a>
-          </li>
-          <li class="menu-item"><a href="#">Gallery</a></li>
-        </ul>
-      </div>
-      <div class="header-main">
-        <p class="header-main-subTitle">Actor</p>
-        <h1 class="header-main-title">Úrsula Corberó - <span> Tokio</span></h1>
-        <p class="header-main-description">
-          Úrsula Corberó Delgado is a Spanish actress. She became known in
-          Spain for playing Ruth Gómez in the teen drama series Física o
-          Química, Margarita de Austria in the historical fiction series
-          Isabel, and Marta in the comedy film Girl's Night Out.
-        </p>
-      </div>
-      <div class="header-bottom">
-        <img src="../../../assets/png/actors-page-png/award-actung-black.png" alt="achivment" />
-        <img src="../../../assets/png/actors-page-png/award-jeevika-black.png" alt="Achivment" />
-        <img src="../../../assets/png/actors-page-png/award-official-black.png" alt="Achivment" />
-      </div>
-    </div>
-  </header>
-  <main>
-    <!-- hadis section -->
-    <section class="about">
-      <div class="main">
-        <img src="./images/main.jpg" />
-        <div class="about-text">
-          <h1>Money Heist</h1>
-          <h3>ACTRESS:Alvaro Morte</h3>
-          <p>
-            Alvaro Morete was born on February 23, 1975 in the city of
-            Algeciras, in Cadiz, Spain, but moved to Córdoba with his family
-            shortly after. Álvaro began his studies in communications
-            engineering and later switched to art, graduating from the Superior
-            School of Dramatic Arts of Córdoba in 1999.Morete also holds a
-            master's degree from the University of Tampere.
-          </p>
-          <div class="spen">
-            <div class="spen-1">2000</div>
-            lorem
-            <div class="spen-2">2000</div>
-            lorem
+  <body>
+    <header class="ursula-header">
+      <div class="container">
+        <nav class="nav-top">
+          <div class="nav-top-left">
+            <img
+              src="../../../assets/images/logo/Logonetflix.png"
+              alt="Logo Netflix"
+              class="logo"
+            />
           </div>
-          <button type="button">button</button>
+          <div class="nav-top-right">
+            <div class="nav-icon"><i class="fa-brands fa-facebook-f"></i></div>
+            <div class="nav-icon"><i class="fa-brands fa-instagram"></i></div>
+            <div class="nav-icon"><i class="fa-brands fa-twitter"></i></div>
+            <div class="nav-icon"><i class="fa-brands fa-youtube"></i></div>
+            <a href="#" class="btn nav-btn">Contact</a>
+          </div>
+        </nav>
+        <div class="nav-bottom">
+          <ul class="menu">
+            <li class="menu-item item-vip">
+              <a href="../../../index.html">Home</a>
+            </li>
+            <li class="menu-item"><a href="#">Summery</a></li>
+            <li class="menu-item">
+              <a href="#winning-awards-section">Achivment</a>
+            </li>
+            <li class="menu-item"><a href="#">Gallery</a></li>
+          </ul>
         </div>
-      </div>
-    </section>
-    <section class="winning-awards-section">
-      <div class="winning-awards-container container">
-        <div class="winning-awards-title">
-          <h2>Winning awards</h2>
-        </div>
-        <div class="winning-awards-desc">
-          <p>
-            She debuted as Maria in the television series Mirall Trencat in
-            2002. She appeared as Sara in Ventdelplà in 2005–06, and in series
-            Cuenta atrás in 2007. In 2008, she portrayed Manuela Portillo in
-            series El Internado and began working on the Antena 3 television
-            series Física o química until 2010.n March 2015, she starred as
-            Nadia in Perdiendo el Norte alongside the actors Blanca Suarez and
-            Yon Gonzalez.This same year, she received the Ciudad de Alicante
-            Award, an award created by the Alicante Film Festival to encourage
-            Spanish young talents.In 2015, she also landed her first main role
-            in a movie in Cómo sobrevivir a una despedida and confirmed she's
-            one of the best comical actresses of Spain.In 2017, Corberó landed
-            a main role in the heist television series La Casa de Papel (Money
-            Heist). She played Tokyo, the narrator of the story, a runaway
-            robber who is scouted by the Professor to participate in his plan.
+        <div class="header-main">
+          <p class="header-main-subTitle">Actor</p>
+          <h1 class="header-main-title">
+            Úrsula Corberó - <span> Tokio</span>
+          </h1>
+          <p class="header-main-description">
+            Úrsula Corberó Delgado is a Spanish actress. She became known in
+            Spain for playing Ruth Gómez in the teen drama series Física o
+            Química, Margarita de Austria in the historical fiction series
+            Isabel, and Marta in the comedy film Girl's Night Out.
           </p>
         </div>
-        <div class="winning-awards-achievement">
-          <div class="achievement">
-            <img src="../../../assets/png/actors-page-png/award-actung-black.png" alt="achivment" />
-          </div>
-          <div class="achievement">
-            <img src="../../../assets/png/actors-page-png/award-jeevika-black.png" alt="achivment" />
-          </div>
-          <div class="achievement">
-            <img src="../../../assets/png/actors-page-png/award-official-black.png" alt="achivment" />
-          </div>
-          <div class="achievement">
-            <img src="../../../assets/png/actors-page-png/award-sedona-black.png" alt="achivment" />
-          </div>
+        <div class="header-bottom">
+          <img
+            src="../../../assets/png/actors-page-png/award-actung-black.png"
+            alt="achivment"
+          />
+          <img
+            src="../../../assets/png/actors-page-png/award-jeevika-black.png"
+            alt="Achivment"
+          />
+          <img
+            src="../../../assets/png/actors-page-png/award-official-black.png"
+            alt="Achivment"
+          />
         </div>
       </div>
-    </section>
-  </main>
-  <footer class="footer">
-    <section class="footer-container container">
-      <div class="footer-box">
-        <div class="footer-box-1">
-          <h1>Get Update</h1>
-          <h4>
-            write your email here to join our community and get update about
-            new season and spin off
-          </h4>
-          <form action="#">
-            <label for="email">
-              email
-              <input type="email" id="email" name="email" />
-            </label>
-          </form>
-        </div>
-        <div class="footer-box-2">
-          <h1>Actors page:</h1>
-          <nav class="footer-menu">
-            <ul class="footer-menu-items">
-              <li class="footer-menu-item">
-                <a href="../pedro alonso/pedro-alonso.html">Pedro Alonso</a>
-              </li>
-              <li class="footer-menu-item">
-                <a href="../alvaro morte/alvaro-morte.html">Alvaro Morte</a>
-              </li>
-              <li class="footer-menu-item">
-                <a href="../itzair ituno/itzair-ituno.html">Itzair Ituno</a>
-              </li>
-              <li class="footer-menu-item">
-                <a href="../../../index.html">Home</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-        <div class="footer-box-3">
-          <h1>La casa de papel cast statement:</h1>
-          <p>
-            After the frantic rendezvous, Ávalos boarded a plane to Los
-            Angeles and popped the drive into his laptop. When his feet hit
-            the ground in California, he knew his next Spanish acquisition had
-            to be “Money Heist.”
-          </p>
-        </div>
-        <div class="footer-box-4">
-          <div class="icon-box">
-            <a class="footer-icon" href="#">
-              <img src="../../../assets/images/fav-icon/instagram-icon.png" alt="insta" />
-            </a>
-            <a class="footer-icon" href="#">
-              <img src="../../../assets/images/fav-icon/telegram-icon.png" alt="telgram" />
-            </a>
-            <a class="footer-icon" href="#">
-              <img src="../../../assets/images/fav-icon/whatsapp-icon.png" alt="whatsapp" />
-            </a>
-            <a class="footer-icon" href="#">
-              <img src="../../../assets/images/fav-icon/x-icon.png" alt="x" />
-            </a>
+    </header>
+    <main>
+      <!-- hadis section -->
+      <section class="about">
+        <div class="main">
+          <img
+            src="../../../assets/images/actors/ursula-corbero-at-fiesta-multiopticas-photocall-in-madrid-09-12-2018-9.jpg"
+          />
+          <div class="about-text">
+            <h1>Money Heist</h1>
+            <h3>ACTRESS:Úrsula Corberó</h3>
+            <p>
+              Úrsula Corberó Delgado is a Spanish actress. She became known in
+              Spain for playing Ruth Gómez in the teen drama series Física o
+              Química, Margarita de Austria in the historical fiction series
+              Isabel, and Marta in the comedy film Girl's Night Out.
+            </p>
+            <div class="spen">
+              <div class="spen-1">1976</div>
+              <p class="span-text">born</p>
+              <div class="spen-2">2017</div>
+              <p class="span-text">>Start Series</p>
+            </div>
+            <button type="button">button</button>
           </div>
         </div>
-      </div>
-    </section>
-  </footer>
-</body>
-
+      </section>
+      <section class="winning-awards-section">
+        <div class="winning-awards-container container">
+          <div class="winning-awards-title">
+            <h2>Winning awards</h2>
+          </div>
+          <div class="winning-awards-desc">
+            <p>
+              She debuted as Maria in the television series Mirall Trencat in
+              2002. She appeared as Sara in Ventdelplà in 2005–06, and in series
+              Cuenta atrás in 2007. In 2008, she portrayed Manuela Portillo in
+              series El Internado and began working on the Antena 3 television
+              series Física o química until 2010.n March 2015, she starred as
+              Nadia in Perdiendo el Norte alongside the actors Blanca Suarez and
+              Yon Gonzalez.This same year, she received the Ciudad de Alicante
+              Award, an award created by the Alicante Film Festival to encourage
+              Spanish young talents.In 2015, she also landed her first main role
+              in a movie in Cómo sobrevivir a una despedida and confirmed she's
+              one of the best comical actresses of Spain.In 2017, Corberó landed
+              a main role in the heist television series La Casa de Papel (Money
+              Heist). She played Tokyo, the narrator of the story, a runaway
+              robber who is scouted by the Professor to participate in his plan.
+            </p>
+          </div>
+          <div class="winning-awards-achievement">
+            <div class="achievement">
+              <img
+                src="../../../assets/png/actors-page-png/award-actung-black.png"
+                alt="achivment"
+              />
+            </div>
+            <div class="achievement">
+              <img
+                src="../../../assets/png/actors-page-png/award-jeevika-black.png"
+                alt="achivment"
+              />
+            </div>
+            <div class="achievement">
+              <img
+                src="../../../assets/png/actors-page-png/award-official-black.png"
+                alt="achivment"
+              />
+            </div>
+            <div class="achievement">
+              <img
+                src="../../../assets/png/actors-page-png/award-sedona-black.png"
+                alt="achivment"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <section class="footer-container container">
+        <div class="footer-box">
+          <div class="footer-box-1">
+            <h1>Get Update</h1>
+            <h4>
+              write your email here to join our community and get update about
+              new season and spin off
+            </h4>
+            <form action="#">
+              <label for="email">
+                email
+                <input type="email" id="email" name="email" />
+              </label>
+            </form>
+          </div>
+          <div class="footer-box-2">
+            <h1>Actors page:</h1>
+            <nav class="footer-menu">
+              <ul class="footer-menu-items">
+                <li class="footer-menu-item">
+                  <a href="../pedro alonso/pedro-alonso.html">Pedro Alonso</a>
+                </li>
+                <li class="footer-menu-item">
+                  <a href="../alvaro morte/alvaro-morte.html">Alvaro Morte</a>
+                </li>
+                <li class="footer-menu-item">
+                  <a href="../itzair ituno/itzair-ituno.html">Itzair Ituno</a>
+                </li>
+                <li class="footer-menu-item">
+                  <a href="../../../index.html">Home</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="footer-box-3">
+            <h1>La casa de papel cast statement:</h1>
+            <p>
+              After the frantic rendezvous, Ávalos boarded a plane to Los
+              Angeles and popped the drive into his laptop. When his feet hit
+              the ground in California, he knew his next Spanish acquisition had
+              to be “Money Heist.”
+            </p>
+          </div>
+          <div class="footer-box-4">
+            <div class="icon-box">
+              <a class="footer-icon" href="#">
+                <img
+                  src="../../../assets/images/fav-icon/instagram-icon.png"
+                  alt="insta"
+                />
+              </a>
+              <a class="footer-icon" href="#">
+                <img
+                  src="../../../assets/images/fav-icon/telegram-icon.png"
+                  alt="telgram"
+                />
+              </a>
+              <a class="footer-icon" href="#">
+                <img
+                  src="../../../assets/images/fav-icon/whatsapp-icon.png"
+                  alt="whatsapp"
+                />
+              </a>
+              <a class="footer-icon" href="#">
+                <img src="../../../assets/images/fav-icon/x-icon.png" alt="x" />
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </footer>
+  </body>
 </html>
